@@ -319,10 +319,10 @@ END
 STRINGTABLE
 BEGIN
   IDS_PICKMERGEFILE       "Please Choose a Database to Merge"
-  IDS_MERGINGDATABASE     "Merging database: %s"
-  IDS_MERGECONFLICTS      "Conflicting entries for |%s|%s|%s|. Added merged entry as |%s|%s|%s|. Differing field(s): %s"
-  IDS_MERGECOMPLETED      "Merge completed: %d %s added\r\n(%d %s, %d %s, %d %s)"
-  IDS_MERGECOMPLETED2     "Merge Completed"
+  IDS_MERGINGDATABASE     "Merging database: %s\r\n"
+  IDS_MERGECONFLICTS      "Conflicting entries for \xbb%s\xbb%s\xbb%s\xbb.\r\n  Added merged entry as \xbb%s\xbb%s\xbb%s\xbb.\r\n    Differing field(s): %s"
+  IDS_MERGECOMPLETED      "\r\nMerge completed: %d %s added\r\n(%d %s, %d %s, %d %s)"
+  IDS_MERGEADDED          "\r\nThe following new %s %s merged into this database:"
 END
 
 STRINGTABLE
@@ -715,4 +715,10 @@ BEGIN
   IDS_ISANALIAS            "This is an alias of: '%s'"
   IDS_ISANALIASBASE        "This is an alias base entry."
   IDS_ISASHORTCUTBASE      "This is a shortcut base entry."
+END
+
+STRINGTABLE
+BEGIN
+  IDS_WAS                  "was"
+  IDS_WERE                 "were"
 END
